src/snapshots/alma__infer__tests__test_infer_module__patterns_in_function_parameters.snap
---
source: src/infer.rs
assertion_line: 3558
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype Test a = Test a\n\nmain (Test a) = a\n\")"
---
Input:

module Test exposing (main)

type Test a = Test a

main (Test a) = a


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

main : ∀ a . Test a -> a
