src/snapshots/alma__infer__tests__test_infer_module__patterns_in_top_level_definitions.snap
---
source: src/infer.rs
assertion_line: 3560
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype Test a = Test a\n\nTest a = Test 1\n\nmain = a\n\")"
---
Input:

module Test exposing (main)

type Test a = Test a

Test a = Test 1

main = a


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

main : ∀ ∅ . Float
