src/snapshots/alma__infer__tests__test_infer_module__use_fully_qualified_union_type_constructor.snap
---
source: src/infer.rs
assertion_line: 2330
expression: "infer(\"\\\nmodule Test exposing (main)\n\nimport Test.Fruits exposing (Fruit)\n\nmain = Test.Fruits.Banana\n\nmodule Test.Fruits exposing (Fruit(Banana))\n    type Fruit = Banana\n\")"

---
Input:

module Test exposing (main)

import Test.Fruits exposing (Fruit)

main = Test.Fruits.Banana

module Test.Fruits exposing (Fruit(Banana))
    type Fruit = Banana


---
Output:

module Test

main : ∀ ∅ . Fruit


module Test.Fruits

Banana : ∀ ∅ . Fruit


