src/snapshots/alma__infer__tests__test_infer_module__using_union_type-2.snap
---
source: src/infer.rs
assertion_line: 2667
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype Banana = Banana\n\ntype Fruit a = Fruit a\n\nmain = Fruit\n\")"
---
Input:

module Test exposing (main)

type Banana = Banana

type Fruit a = Fruit a

main = Fruit


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

main : ∀ a . a -> Fruit a
